@@ -20,3 +20,4 @@ commands.grandeconomy.wallet.given=%s added to %s balance
 commands.grandeconomy.wallet.taken=%s taken from %s balance
 commands.grandeconomy.wallet.set=%s balance set to %s
 commands.grandeconomy.wallet.balance=%s balance: %s
+commands.grandeconomy.wallet.negative=You cannot do this because it would set the %s's balance below zero.
