@@ -3,3 +3,6 @@ When using Grand Economy currency, Grand Economy is now registered as an economy
 It is now possible for server owners to specify items in config that can be converted into currency using the new /convert command.
 Fixed internal exceptions when trying to use /pay and /balance from console
 Fixed multiple other internal exceptions when using commands
+Fixed balance being allowed to go below zero when using /wallet commands
+Added localization support
+Added Chinese localization (xiaoxixi)
